--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ logging.level.org.springframework.web=DEBUG
 # Security Configuration
 spring.security.user.name=admin
 spring.security.user.password=admin123
+
+# Ensure schema.sql is executed at startup (only schema, no data)
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
